3rd try to fix unresponsiveness on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@ body {
   font-family: 'Roboto', sans-serif;
   min-height: 100%;
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
   display: flex;
   align-items: center;
 }
